# aic-stream-transcribe

./: .gitignore  README.md  aic_sdk_enhancer.py  demo.py  demo_batch_process.py  demo_prerecorded.py  html_generator.py  pyproject.toml  soniox_streamer.py
stt_streamers/: __init__.py  deepgram_streamer.py  soniox_streamer.py
